<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/IdTextHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textHelp"
            android:textColor="@color/colorBiruze"
            android:textSize="15pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/IdImageButton"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@color/colorGreen"
            android:clickable="true"
            android:contentDescription="@string/btnStartLang"
            android:focusable="true"
            android:foregroundGravity="center"

            android:scaleType="centerCrop"
            android:src="@drawable/start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:foregroundGravity="clip_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/IdButtonSettings"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_weight="2"

            android:text="@string/TextButtonSettings" />

        <Button
            android:id="@+id/IdButtonLang"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:text="@string/TextButtonLangRU" />

        <Button

            android:id="@+id/IdButtonClose"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_weight="2"

            android:text="@string/TextButtonClose" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>